# steam-plasmoid

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  Steam plasmoid.kdev4  plasmoid-tempinstall-run.sh  plasmoid-test.sh
.kdev4/: Steam plasmoid.kdev4
org.kde.plasma.steam/: metadata.desktop
org.kde.plasma.steam/contents/ui/: main.qml
plugin/: backend.cpp  backend.h  gamesmodel.cpp  gamesmodel.h  qmldir  steamplugin.cpp  steamplugin.h  texttoken.cpp  texttoken.h
